fixing widths to look good on mobile

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -5,37 +5,38 @@
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .image-view > img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 
-.video-view {
-    position: fixed;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    object-fit: cover;
+@media only screen and (max-width: 600px) {
+    .image-view {
+        object-fit: cover;
+    }
+
+    .image-view > img {
+        object-fit: cover;
+    }
 }
 
 .return-btn {
     position: fixed;
-    left: 48%;
+    left: 47%;
     border: none;
     background-color: transparent;
-    width: 4%;
+    width: 2em;
+    padding: 1em 0em;
     z-index: 1;
+    filter: invert(1);
 }
 
 .return-btn-img {
-    width: 100%;
-    min-width: 20px;
+    width: 2em;
 }
 
 .home-btns {
@@ -45,10 +46,11 @@
 }
 
 .camera-btn {
-    width: 5%;
+    width: 2.5em;
     position: absolute;
     bottom: 0;
-    padding: 1%;
+    padding: 0.7em;
+    filter: invert(1);
 }
 
 .photo-screen {
@@ -56,9 +58,10 @@
 }
 
 .photo-header {
-    position: absolute;
-    top: 2%;
-    width: 98%;
+    position: fixed;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 0.7em 0.5em;
     display: flex;
     justify-content: space-between;
 }
@@ -66,8 +69,12 @@
 .photo-header > button {
     border: none;
     background-color: transparent;
-    width: 3%;
-    font-size: 20px;
+    width: 1.2em;
+    font-size: 1.2em;
+}
+
+.photo-header > button > img {
+    width: 1em;
 }
 
 .arrow-btn-img {
