--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -3,19 +3,29 @@
     bottom: 0;
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .navbar-icon {
-    width: 3%;
-    margin: 1% 3%;
+    flex: 1;
+    width: 1.5em;
+    height: 1.5em;
+    padding: 0.4em;
+    background-color: white;
+    opacity: 0.7;
 }
 
 .navbar-icon > img {
-    width: 100%;
-    opacity: 0.6;
+    width: 1.5em;
+    opacity: 0.7;
+    display: block;
+    margin: 0 auto;
 }
 
-img.navbar-page {
+.cur-page {
+    opacity: 1;
+}
+
+.cur-page > img {
     opacity: 1;
 }
