--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -14,8 +14,7 @@
 	min-width: 50%;
 	padding: 16px 32px;
 	text-align: center;
-	font-size: 24px;
-	font-size: 3.5vmin;
+	font-size: 1em;
 }
 
 .wallpapers {
@@ -26,6 +25,5 @@
 	min-width: 50%;
 	padding: 16px 32px;
 	text-align: center;
-	font-size: 24px;
-	font-size: 3.5vmin;
+	font-size: 1em;
 }
