--- a/src/css/QuoteModal.css
+++ b/src/css/QuoteModal.css
@@ -14,14 +14,13 @@
 
 .quote-text {
     font-family: Arial;
-    font-size: 16px; 
-    font-size: 3vw;
-    line-height: 3.5vw;
+    font-size: 1.7em;
     text-transform: uppercase;
     text-align: center;
     color: white;
     width: 75%;
     min-width: 100px;
+    margin-bottom: 1em;
     opacity: 1;
 }
 
@@ -34,7 +33,7 @@
 
 .time-text {
     font-family: Arial;
-    font-size: 14px; 
+    font-size: 0.8em;
     color: white;
 }
 
@@ -56,15 +55,12 @@
 
 .footer-ctr {
     opacity: 1;
-    width: 3%;
-    padding: 1%;
+    width: 1.5em;
+    padding: 0.5em;
 }
 
 .footer-ctr > img {
     opacity: 1;
     filter: invert(1);
-    min-width: 20px;
-    max-width: 50px;
     width: 100%;
-    height: auto;
 }
