--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,4 +3,11 @@ html, body {
   padding: 0;
   color: white;
   font-family: Arial;
+  font-size: 24px;
+}
+
+@media only screen and (max-width: 600px) {
+  body {
+      font-size: 20px;
+  }
 }
